# cherry

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  test.py
core/: CMakeLists.txt  main.cpp  test.mlir  transformer.mlir
core/include/: CMakeLists.txt
core/include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
core/include/Conversion/CherryToLinalg/: CherryToLinalg.h  LinalgTiling.h  LinalgVectorization.h
core/include/Conversion/GPU/: InsertHostRegister.h
core/include/Dialect/: CMakeLists.txt
core/include/Dialect/Cherry/IR/: CherryDialect.h  CherryDialect.td  CherryOps.h  CherryOps.td  CherryTypes.h  CherryTypes.td
core/include/Dialect/Cherry/Transforms/: CMakeLists.txt  Passes.h  Passes.td
core/include/Interfaces/: CMakeLists.txt  CherryInterface.h  CherryInterface.td
core/include/Pipelines/: Pipelines.h
core/include/Utils/: Cache.h
core/include/conversion/: CMakeLists.txt  Passes.h  Passes.td
core/include/conversion/CherryToLinalg/: CherryToLinalg.h
core/include/dialect/cherry/IR/: CMakeLists.txt  CherryDialect.h  CherryDialect.td  CherryOps.h  CherryOps.td  CherryTypes.h  CherryTypes.td
core/include/dialect/cherry/Transforms/: Passes.h  Passes.td
core/include/interfaces/: CherryInterface.h
core/src/: CMakeLists.txt
core/src/Conversion/: CMakeLists.txt
core/src/Conversion/CherryToLinalg/: CMakeLists.txt  CherryToLinalg.cpp  LinalgTiling.cpp  LinalgVectorization.cpp
core/src/Conversion/GPU/: CMakeLists.txt  InsertHostRegister.cpp
core/src/Dialect/Cherry/IR/: CMakeLists.txt  CherryDialect.cpp  CherryOps.cpp  CherryTypes.cpp
core/src/Dialect/Cherry/Transforms/: ShapeInferencePass.cpp
core/src/Interfaces/: CMakeLists.txt  CherryInterface.cpp
core/src/Pipelines/: CMakeLists.txt  Pipelines.cpp
core/src/Tools/: CMakeLists.txt  CherryOpt.cpp
core/src/Utils/: CMakeLists.txt  Cache.cpp
core/src/conversion/: CMakeLists.txt
core/src/conversion/CherryToLinalg/: CMakeLists.txt
core/src/dialect/cherry/IR/: CMakeLists.txt  CherryDialect.cpp  CherryOps.cpp  CherryTypes.cpp
core/src/dialect/cherry/Transforms/: CMakeLists.txt  ShapeInferencePass.cpp
core/src/interfaces/: CherryInterface.cpp
docs/: Dialect.md  GPU.md  Performance.md  Runtime.md  Utils.md
python/: CMakeLists.txt  bindings.cpp  llama110M.json  output.ll  test.mlir  test.py  test.sh  tools.py  torch_test.py
python/cherry/: __init__.py
runtime/: CMakeLists.txt  clock.cpp  main.cpp  runtime.cpp  tokenizer.cpp
tests/: after_canonicalizer.mlir  after_inliner.mlir  build_transformer.cpp  test.mlir  test_output.mlir  test_transformer.mlir  test_transformer_output.mlir  transformer.mlir  transformer.py  transformer_static.cpp
tests/components/: help.txt  output.ll  run_attention_opt.sh  run_llama_opt.sh  run_opt.sh  run_test.sh  test_attention.mlir  test_llama.mlir  test_masked_matmul  test_masked_matmul.mlir  test_masked_matmul_output.ll  test_masked_matmul_output.mlir  test_matmul.mlir  test_matmul_linglg.mlir  test_matmul_vector.mlir  test_rmsnorm.mlir  test_rmsnorm_output.ll  test_rmsnorm_output.mlir  test_rope  test_rope.mlir  test_rope_output.ll  test_rope_output.mlir  test_silu.mlir  test_silu_output.mlir  test_softmax.mlir  test_softmax_output.mlir  test_tensor_get_set.mlir  test_tensor_get_set_output.mlir  test_tensor_set_slice.mlir  test_tensor_set_slice_output.mlir  test_tensor_slice.mlir  test_tensor_slice_output.mlir  test_transpose.mlir  test_weight.mlir
tests/gpu/: lower.mlir  lower_llvm.mlir  my_gpu_app  output.ll  standard.mlir  standard_llvm.mlir  test.mlir  test.sh
tests/gpu/llama/: llama_raw.mlir
tests/gpu/test/: host.ll  kernel.ll  kernel.mlir  kernel.ptx  lower.mlir
tests/llama/: build.sh  build.txt  cherry.mlir  cherry_dynamic.mlir  cherry_output.ll  cherry_output.mlir  cherry_python.mlir  llama  main.cpp  monica_example.mlir  output.ll  runner.ll
tests/simplang/: cherry.txt  llama.txt
utils/: CMakeLists.txt  build.sh  export.cpp  export.py
